--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -7,7 +7,12 @@ h1{
 	font-size: 55px;
 }
 
-#loginform{
+h3{
+	text-align: center;
+	font-size: 18px;
+}
+
+#form{
 	margin-top: 150px;
 	box-shadow: 2px 2px 2px #000;
 	width: 80%;
@@ -16,7 +21,7 @@ h1{
 
 }
 
-#loginform form{
+#form form{
 	width: 60%;
 	margin-right: auto;
 	margin-left: auto;
@@ -24,12 +29,12 @@ h1{
 	margin-top: 30px;
 }
 
-#loginform input{
+#form input{
 	background-color: #F7F7F7;
 	border: none;
 }
 
-#loginform button{
+#form button{
 	background-color: #7FA348;
 	color: white;
 	border: none;
