--- a/public/css/dashboard-style.css
+++ b/public/css/dashboard-style.css
@@ -51,9 +51,11 @@
     margin-bottom: 1em;
     border-radius: 4px;
     padding: 1em;
+    padding-top:0.5em;
 }
 h5{
     color:white;
+    font-size: 0.8rem;
 }
 .silo-stats progress{
     -ms-transform: rotate(-90deg); /* IE 9 */
@@ -67,7 +69,7 @@ h5{
     height: 2rem;
     margin: auto;
     margin-bottom: 4.5rem;
-    margin-left: -3.2em;
+    margin-left: -1.8em;
 }
 .silo-stats{
     display: flex;
@@ -79,7 +81,7 @@ h5{
     color:white;
 }
 .silo-stats-stat{
-    width:3em;
+    width:6em;
 }
 .silo-stats-stat h4{
     font-size: 0.8em;
@@ -102,7 +104,7 @@ h5{
     justify-content: space-between;
 }
 .cgr{
-    width: 55%;
+    width: 50%;
     border: 1px solid #434857;
     border-radius: 4px;
     padding: 1em;
@@ -112,7 +114,7 @@ h5{
     padding-right: 1em;
 }
 .cgg{
-    width: 42%;
+    width: 48%;
     border: 1px solid #434857;
     
     border-radius: 4px;
