--- a/public/css/donut-style.css
+++ b/public/css/donut-style.css
@@ -16,8 +16,8 @@
 .pie {
   height: 150px;
   width: 150px;
-    margin-top: 0.5em; 
-    margin-left: 3.5em;
+    margin-top: 0.5em;
+  margin-left: 6em;
     margin-right: auto;
   position: relative;
  
@@ -62,14 +62,16 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
-  margin-top: 3em;
+  margin-top: 2em;
   
   font-size: 13px;
   
 }
 .legend li {
   width: 50px;
-  
+  text-align: center;
+  display: flex;
+  flex-direction: column;
   height: 1.25em;
   margin-bottom: 0.7em;
   margin-left: 0.1em;
