--- a/public/css/master-style.css
+++ b/public/css/master-style.css
@@ -6,7 +6,7 @@ body{
     margin-left: 1em;
     margin-right: 1em;
     margin-top: 1em;
-    
+    height: 85vh;
     display: flex;
     flex-direction: row;
 }
