--- a/public/css/dashboard-style.css
+++ b/public/css/dashboard-style.css
@@ -1,8 +1,173 @@
 
+.frame{
+
+    /* temp css*/
+
+
+
+
+    border-radius: 7px;
+    background-color: #1B2F3D;
+}
+.prime{
+    height: 47%;
+}
+.stock{
+    height: 47%;
+}
+.recycle{
+    height: 100%;
+    width:50%;
+}
+.event{
+    overflow: hidden;
+    height:50%;
+    margin-top: 1em;
+}
+.rawmaterials{
+    width:48%;
+}
+.frame-title{
+    background-color: #213140;
+    width: 100%;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    border-bottom:2px solid #1D2D3C;
+
+}
+.frame-title h2{
+
+    text-align: center;
+    font-weight: 200;
+    margin: 0;
+    padding:5px;
+    color: #4F6381;
+    font-size: 1em;
+}
+.silo-group{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    -webkit-align-items: stretch;
+    align-items: stretch;
+
+}
+.silo-container{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.silo-container h3{
+    padding: 0;
+    margin: 0;
+
+    color: whitesmoke;
+
+}
+.silo-graph{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    border-radius: 2px;
+    overflow: hidden;
+    margin-top: 0.2em;
+    background-color: #263E4E;
+    height: 120px;
+    width: 70px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+.silo-graph-value{
+    width: 100%;
+    height:60px;
+    display: flex;
+    background-color: #1898D6;
+
+}
+
+.silo-info{
+    display: flex;
+    flex-direction: column;
+
+
+    text-align: center;
+
+}
+.silo-info h3{
+    margin: 0;
+    padding: 0;
+    font-size: 0.8em;
+    padding-top: 1em;
+    color: #4F6381;
+}
+.silo-info h4{
+    margin: 0;
+    padding: 0;
+    font-size: 1em;
+    padding-top: 0.6em;
+    color: whitesmoke;
+}
+.stock-group{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    -webkit-align-items: stretch;
+    align-items: stretch;
+    flex-wrap: wrap;
+}
+
+.stock-container{
+    display: flex;
+    flex-direction: column;
+
+    border-radius: 2px;
+    overflow: hidden;
+    margin-top: 0.5em;
+    background-color: #253E4F;
+    height: 160px;
+    width: 100px;
+    text-align: center;
+}
+
+.stock-container h2{
+    margin: 0;
+    padding-top: 0.5em;
+    color: whitesmoke;
+}
+.stock-container h3{
+    margin: 0;
+    padding: 0;
+    padding-top: 0.1em;
+    font-weight: 200;
+    font-size: 3em;
+    color: #FACB5B;
+}
+.stock-container p{
+    margin: 0;
+    padding: 0;
+
+    font-weight: 200;
+    font-size: 1em;
+    color: #FACB5B;
+}
+.stock-container .oppervlak{
+
+
+    padding-top: 0.4em;
+
+
+    margin-top: 0.2em;
+
+    border-top: 1px solid #22313F;
+    color: whitesmoke;
+    font-size: 0.8em;
+}
 
 
 .left{
     width:37%;
+
 }
 .by{
    
@@ -133,7 +298,7 @@ h5{
 .log-console{
     padding: 1em;
     padding-top: 0.5em;
-    color: white;
+    color: #F5F5F5;
 
 }
 .log-console p{
@@ -164,5 +329,7 @@ h5{
 
 /* donut graph */ 
 
-    
+
+
+/* dash v2*/
 
