--- a/public/css/login-style.css
+++ b/public/css/login-style.css
@@ -1,52 +1,65 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 body{
-    background-color: #79B956;
-    
+  background: url("../loginbackground.jpg") no-repeat center center fixed;
+  font-family: 'roboto', sans-serif;
+    width: 100%;
+  height: 100%;
 }
-
 .container{
-  position: relative;
-  z-index: 1;
-  background: #FFFFFF;
-  max-width: 300px;
-  margin: 0 auto 100px;
-  margin-top: 10em;
-  padding: 45px;
+  display: block;
+  border: 1px solid #D8DADB;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.2),0px 0px 1px 0px rgba(0,0,0,0.2);
+  width: 600px;
+  margin-top: 125px;
+}
+.container form{
+  width: 100%;
+}
+.container h2{
   text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
-.login-form h5{
-    font-family: "Roboto", sans-serif;
-    font-size: 3em;
-    font-weight: 100;
-    padding-bottom: 0.5em;
-    margin: 0;
+.container input{
+  width: 80%;
+  padding: 1em;
+  background-color: white;
+  border-radius: 3px;
+  border: 1px solid #DDD;
+  box-shadow: inset 0 1px 3px rgba(0,0,0,0.06);
+  font-size: 1.1em;
+  height: 50px;
+  margin-left: 10%;
 }
-.login-form input {
-  font-family: "Roboto", sans-serif;
-  outline: 0;
-  background: #f2f2f2;
-  width: 100%;
+.container label{
+  text-align: left !important;
+  margin-left: 10% !important;
+  padding-left: 2px !important;
+  font-size: 1.2em;
+}
+.container .message{
+  color: #A74544;
+  margin-top: 5px;
+  margin-left: 10%;
+}
+.container button{
+  width: 80%;
+  margin-left: 10%;
+  height: 60px;
+  background-color: green;
+  font-size: 1.3em;
   border: 0;
-  margin: 0 0 15px;
-  padding: 15px;
-  box-sizing: border-box;
-  font-size: 14px;
+  border-radius: 3px;
+  color: white;
+  transition: 0.3s;
 }
-.login-form button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  outline: 0;
-  background: #4CAF50;
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: #FFFFFF;
-  font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  cursor: pointer;
+.container button:hover{
+  background-color: darkgreen;
 }
-.login-form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
+.container .forgot{
+  margin-right: 10%;
+  margin-top: 25px;
+  float: right;
+  font-size: 1.1em;
+  padding-bottom: 40px;
 }
