--- a/public/css/login-style.css
+++ b/public/css/login-style.css
@@ -13,6 +13,7 @@ body{
   box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.2),0px 0px 1px 0px rgba(0,0,0,0.2);
   width: 600px;
   margin-top: 125px;
+  min-height: 300px;
 }
 .container form{
   width: 100%;
@@ -46,6 +47,7 @@ body{
   width: 80%;
   margin-left: 10%;
   height: 60px;
+  margin-top: 40px;
   background-color: green;
   font-size: 1.3em;
   border: 0;
