--- a/public/css/dashboard-style.css
+++ b/public/css/dashboard-style.css
@@ -9,6 +9,21 @@
     border-radius: 7px;
     background-color: #1B2F3D;
 }
+
+.imgAddIcoon
+{
+    margin-top: 65px;
+    font-size: 5rem;
+    color: whitesmoke;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+.imgAddIcoon:hover,
+.imgAddIcoon:active{
+    color: #ddd;
+}
+
 .prime{
     height: 47%;
 }
@@ -326,8 +341,8 @@ h5{
 
 
 
-
 /* donut graph */ 
+
 
 
 
