--- a/public/css/login-style.css
+++ b/public/css/login-style.css
@@ -2,7 +2,7 @@
 body{
   background: url("../loginbackground.jpg") no-repeat center center fixed;
   font-family: 'roboto', sans-serif;
-    width: 100%;
+  width: 100%;
   height: 100%;
 }
 .container{
@@ -11,7 +11,8 @@ body{
   background-color: #fff;
   border-radius: 4px;
   box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.2),0px 0px 1px 0px rgba(0,0,0,0.2);
-  width: 600px;
+  width: 100%;
+  max-width: 600px;
   margin-top: 125px;
   min-height: 300px;
 }
