Changed response messages to Dutch

--- a/public/css/account-style.css
+++ b/public/css/account-style.css
@@ -48,7 +48,7 @@
     font-size: 1.2em;
     padding-top: 10px;
     padding-bottom: 10px;
-    color: #197E1C;
+    color: white;
 }
 #profile_page form{
     display: flex;
