layout dashboard and silo (mobile)

--- a/public/css/navigation-style.css
+++ b/public/css/navigation-style.css
@@ -54,6 +54,13 @@
         right: 35px;
     }
 }
+
+@media screen and (max-width: 550px) {
+    .overlay-content {
+        top: 7%;     }
+}
+
+
     .navigation-bar {
         border-radius: 0;
         background-color: black;
