--- a/public/css/donut-style.css
+++ b/public/css/donut-style.css
@@ -9,10 +9,13 @@
 
 
 .char{
-  width: 45%;
+  display: block;
+  width: 50%;
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
 }
+
 .pieID {
   display: inline-block;
   vertical-align: top;
@@ -60,7 +63,7 @@
 }
 .legend {
     color: #F5F5F5;
- margin-top: 1em;
+  margin-top: 1em;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -68,12 +71,13 @@
   padding: 0;
   margin: 0;
   margin-top: 2em;
-  
   font-size: 13px;
-  
+  width: 90%;
+  margin-left:auto;
+  margin-right:auto;
 }
 .legend li {
-  width: 50px;
+  width: 45px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -81,10 +85,11 @@
   margin-bottom: 0.7em;
   margin-left: 0.1em;
   margin-right: 0.1em;
-  
   border-top: 0.5em solid black;
-  
 }
+
 .legend em {
+  padding-top: 5px;
+  padding-bottom: 5px;
   font-size: 0.8em;
 }
