--- a/public/css/silo-style.css
+++ b/public/css/silo-style.css
@@ -1,63 +1,127 @@
 body{
-    height: 80vh;
+    background: url("../background.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    min-height: 100vh;
 }
-.silo-container{
-    border: 1px solid #434857;
-    margin:1em;
-    padding: 0.5em;
-    border-radius: 4px;
-    height: 100%;
-    width: 96%;
-    color: white;
-}
-.contain{
-    width: 80%;
 
-
+.silo-title
+{
+    width: 90%;
     margin-left:auto;
-    margin-right: auto;
+    margin-right:auto;
+    display: block;
 }
-.silo-stats{
-    margin-top: 0;
-}
-.silo-stats-stat{
-    width: 8em;
-    height: 22em;
 
-    border: none;
-    border-radius: 6px;
-    display: flex;
-    flex-direction: column;
+.silo-title > h5
+{
+    font-size: 1.5em;
+    float: left;
+    display: block;
+    width: 75%;
     text-align: center;
 }
-.silo-stats-stat input{
-    color: #1997C6;
-    width: 4.5em;
-    font-size: 0.8em;
-    margin-left: auto;
-    margin-right: auto;
+
+.silo-title > span
+{
+    width: 20%;
+    float: right;
+    display: block;
+    text-align: center;
 }
-.silo-menu{
-    margin-left: auto;
-    margin-right: auto;
+.silo-container{
+    width: 90%;
+    margin-left:auto;
+    margin-right:auto;
+    color: white;
+    margin-top: 10px;
+    padding-top: 20px;
+    background-color: #1b2e3c;
 }
 
-.silo-stats-stat .progress{
-    margin-left: -0.6em;
+.silo-stats
+{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left:auto;
+    margin-right:auto;
+    width: 90%;
+    justify-content: space-around;
 }
+
+.silo-stats-stat
+{
+    padding-top: 10px;
+    width: 40%;
+    background-color: #3b6482 ;
+    border-radius: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    max-width: 100px;
+}
+
+.silo-stats-stat > h3
+{
+    color: #fff;
+    font-size: 1.5em;
+    font-weight:bold;
+    text-align: center;
+}
+
+.silo-graph
+{
+    background-color: #fff;
+    height: 120px;
+    width: 40px;
+    margin-left: auto;
+    margin-right:auto;
+    text-align: center;
+    position: relative;
+}
+
+.silo-graph-value
+{
+    width: 40px;
+    margin-left:auto;
+    margin-right:auto;
+    text-align: center;
+    position: absolute;
+    bottom:0;
+}
+
+.silo-info > h3
+{
+    color: #fff;
+    font-size: 1.1em;
+    font-weight: 500;
+    text-align: center;
+    padding-top: 5px;
+}
+
+.silo-info > h4
+{
+    color: #f1f1f1;
+    font-weight: 500;
+    text-align: center;
+    padding-bottom: 5px;
+}
+
 .config-icon{
     font-size: 2em;
 }
-.silo-title{
-    display: flex;
-    padding: 1em;
-    flex-direction: row;
-    justify-content: space-between;
-}
+
 .silo-delete{
     visibility: hidden;
-    padding: 1em;
+    display: block;
+    color: red;
     margin-bottom: 1em;
+    text-align: center;
+    margin-left:auto;
+    margin-right:auto;
+    width: 40%;
 }
 .silo-delete span{
     color: #FF4A49;
@@ -70,4 +134,9 @@ body{
 }
 #new-silo{
     display: none;
+}
+
+.clearfix
+{
+    clear: both;
 }
