--- a/public/css/donut-style.css
+++ b/public/css/donut-style.css
@@ -23,7 +23,7 @@
 .pie {
   height: 150px;
   width: 150px;
-    margin-top: 0.5em;
+    margin-top: 24px;
     margin-left: auto;
     margin-right: auto;
   z-index: 0;
@@ -70,7 +70,6 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
-  margin-top: 2em;
   font-size: 13px;
   width: 90%;
   margin-left:auto;
