--- a/public/css/dashboard-style.css
+++ b/public/css/dashboard-style.css
@@ -8,11 +8,11 @@ body
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-#contentContainer
+.contentContainer
 {
     width: 90%;
     display: flex;
-    margin: 20px auto;
+    margin: 0 auto;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -36,7 +36,6 @@ body
     background-color: #1b2e3c;
     width: 90%;
     margin: 10px auto;
-    padding-top: 10px;
     padding-bottom: 20px;
     border-radius: 2px;
 }
@@ -129,7 +128,7 @@ body
 
 .silo-container
 {
-    padding-top: 10px;
+    padding-top: 23px;
     width: 40%;
     background-color: #3b6482 ;
     border-radius: 5px;
@@ -137,6 +136,8 @@ body
     margin-right: 10px;
     margin-top: 10px;
     max-width: 100px;
+    display: block;
+    height: 100%;
 }
 
 .silo-container > h3
@@ -146,7 +147,13 @@ body
     font-weight:bold;
     text-align: center;
     margin-bottom: 7px;
+}
 
+.silo-info
+{
+    margin-bottom: 0;
+    padding-bottom: 0;
+    display: block;
 }
 
 .silo-info > h3
@@ -164,7 +171,6 @@ body
     font-weight: 500;
     text-align: center;
     padding-top: 5px;
-    padding-bottom: 10px;
 }
 
 .silo-graph
@@ -190,7 +196,6 @@ body
 
 .imgAddIcoon
 {
-    margin-top: 20px;
     font-size: 2.7em;
     color: #fff;
 }
