--- a/public/css/formAdd-style.css
+++ b/public/css/formAdd-style.css
@@ -11,11 +11,14 @@ body
 .container
 {
     margin: 0;
+    margin-left:auto;
+    margin-right:auto;
+    display: block;
 }
 
 .row
 {
-    margin: 20px 0 0 0;
+    margin: 20px 0;
 }
 
 label
