--- a/public/css/navigation-style.css
+++ b/public/css/navigation-style.css
@@ -7,7 +7,7 @@
     left: 0;
     top: 0;
     background-color: rgb(0,0,0); /* Black fallback color */
-    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+    background-color: rgba(0,0,0, 0.95); /* Black w/opacity */
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
 }
@@ -18,15 +18,19 @@
     top: 25%; /* 25% from the top */
     width: 100%; /* 100% width */
     text-align: center; /* Centered text/links */
-    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+    margin-top: 30px;
+    display: flex/* 30px top margin to avoid conflict with the close button on smaller screens */
 }
 
 /* The navigation links inside the overlay */
 .overlay a {
     padding: 8px;
+    margin-top: 1px;
     text-decoration: none;
     font-size: 36px;
     color: #818181;
+    margin-left:auto;
+    margin-right:auto;
     display: block; /* Display block instead of inline */
     transition: 0.3s; /* Transition effects on hover (color) */
 }
@@ -44,6 +48,11 @@
     font-size: 60px;
 }
 
+.closebtn
+{
+    top: 10px;
+}
+
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
     .overlay a {font-size: 20px}
@@ -52,13 +61,22 @@
         top: 15px;
         right: 35px;
     }
+
+    .closebtn
+    {
+        top: 0;
+    }
+}
+
+.navigation-buttons a p{
+    padding-top: 10px;
 }
 
 @media screen and (max-width: 550px) {
     .overlay-content {
-        top: 7%;     }
-}
+        top: 60px;     }
 
+}
 
     .navigation-bar {
         border-radius: 0;
@@ -93,11 +111,14 @@
         transform: rotate(-90deg);
     }
     .navigation-links a{
-        font-size: 1.25rem;
+        font-size: 1em;
         color: whitesmoke;
         border-left: 1px solid whitesmoke;
         padding-left: 1em;
         padding-right: 1em;
+        text-align: center;
+        margin-left:auto;
+        margin-right:auto;
     }
     .navigation-links a:first-child{
         border-left: 0;
@@ -108,7 +129,7 @@
     }
 
     .navigation-buttons{
-        width:60%;
+        width:80%;
         margin-left: auto;
         margin-right: auto;
         display: flex;
@@ -117,14 +138,20 @@
         justify-content: space-around;
     }
     .navigation-buttons a{
-        width:8rem;
+        width:50%;
         font-size: 3rem;
-        margin-left: 0.5em;
-        margin-right: 0.5em;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        display: block;
 
     }
     .navigation-buttons a p{
         font-size: 1rem;
+        text-align: center;
+        margin-left:auto;
+        margin-right:auto;
+        display: block;
     }
 .glyphicon {
 
