--- a/public/css/permissions-style.css
+++ b/public/css/permissions-style.css
@@ -1,6 +1,29 @@
+body
+{
+    background: url("../background.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.row
+{
+    margin-left:auto;
+    margin-right:auto;
+    width: 90%;
+    display: block;
+    margin-top: 20px;
+}
 
 .permission-frame{
-    padding:3em;
+    width: 90%;
+    margin-left:auto;
+    margin-right:auto;
+    display: block;
+    padding-left: 20px;
+    padding-right: 50px;
+    padding-top: 20px;
 }
 .permission-frame h3{
     padding-bottom: 1em;
@@ -8,7 +31,6 @@
 .permission-frame .user-info{
      display: flex;
      flex-direction: row;
-
  }
 .permission-frame .user-info h3{
    padding-left: 1em;
