--- a/public/css/formAdd-style.css
+++ b/public/css/formAdd-style.css
@@ -10,15 +10,14 @@ body
 
 .container
 {
-    margin: 0;
-    margin-left:auto;
-    margin-right:auto;
-    display: block;
+
 }
 
 .row
 {
-    margin: 20px 0;
+    width: 90%;
+    margin: 20px auto;
+    display: block;
 }
 
 label
@@ -52,14 +51,25 @@ label
     margin-left:auto;
     margin-right:auto;
     display: block;
-    width: 80%;
     max-width: 200px;
+    width: 80%;
     background-color: #74a0c0;
     border: none;
+    text-align: center;
 }
 
 #CreateMaterialbutton:hover,
 #CreateMaterialbutton:active
 {
     background-color: #4b7fa5;
+}
+
+#txtGrondstof
+{
+    width: 100%;
+    margin-left:auto;
+    margin-right:auto;
+    display: block;
+    border-radius: 5px;
+    border: 1px solid darkgrey;
 }
