--- a/public/css/silo-style.css
+++ b/public/css/silo-style.css
@@ -35,6 +35,7 @@ body{
     width: 90%;
     margin-left:auto;
     margin-right:auto;
+    display: block;
     color: white;
     margin-top: 10px;
     padding-top: 20px;
