--- a/public/css/account-style.css
+++ b/public/css/account-style.css
@@ -64,6 +64,7 @@ body{
 #profile_page .input {
     height: 40px;
     color: #555;
+    width: 100%;
     max-width: 400px;
     border-radius: 3px;
     border: 1px solid #DDD;
@@ -87,16 +88,7 @@ body{
     flex-direction: row;
     justify-content: space-between;
 }
-.permission-btn{
-     padding-bottom: 2em;
- }
-.permission-btn span{
-    margin: 0 !important;
-    padding-top: 1em;
-    text-align: center;
-    width: 100%;
-}
-.permission-btn p{
-    margin: 0 !important;
-
+#admin-btn{
+    padding-top: 20px;
+    display: flex;
 }
