--- a/public/css/dashboard-style.css
+++ b/public/css/dashboard-style.css
@@ -60,7 +60,7 @@ body
     width: 80%;
     margin-left:auto;
     margin-right:auto;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .stock-container
