--- a/public/css/block-style.css
+++ b/public/css/block-style.css
@@ -57,6 +57,59 @@ background-color: #1b2e3c;
 
 }
 
+
+#formEditBlock{
+    background-color: #1b2e3c;
+    border: none;
+    padding-bottom: 50px;
+}
+
+#editInBlock{
+    margin-top: -10px;
+    padding-top: 20px;
+    background-color: #3b6482;
+    margin-right: auto;
+    margin-left: auto;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding-bottom: 10px;
+    width: 90%;
+}
+
+#editInBlock label{
+    color: white;
+
+  
+}
+#editInBlock input{
+    width: 70%;
+
+}
+
+#formEditBlock h1{
+    font-size: 1.8em;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    padding-top: 15px;
+    text-align: center;
+    color: white;
+}
+
+#formEditBlock h3{
+    color: white;
+    background-color: #111c25;
+    text-align: center;
+    font-size: 1.4em;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
+
 .silo-title > h1
 {
     font-size: 1.8em;
@@ -108,6 +161,7 @@ background-color: #3b6482;
     padding: 0 0 5px 0;
     margin: 0;
 }
+
 
 .block-total > h1
 {
