--- a/public/css/account-style.css
+++ b/public/css/account-style.css
@@ -44,7 +44,7 @@ body{
 #profile_page .profile_button:hover{
     background-color: #09630C;
 }
-#profile_page label{
+#profile_page .divider{
     border-bottom: 1px solid #C8C6C7;
     padding-bottom: 10px;
     width: 100%;
