--- a/public/css/block-style.css
+++ b/public/css/block-style.css
@@ -76,14 +76,22 @@ background-color: #1b2e3c;
     width: 90%;
 }
 
-#editInBlock label{
+#custom{
     color: white;
+    font-weight: bold;
+}
 
-  
+#editInBlock label{
+    color: white; 
 }
 #editInBlock input{
     width: 70%;
-
+}
+#textHeight{
+    width: 70%;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    border-radius: 3px;
 }
 
 #formEditBlock h1{
@@ -211,4 +219,11 @@ background-color: #3b6482;
 #groupCustomHeight
 {
     display: none;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#buttonAddCustom{
+    color: red;
 }
