--- a/public/css/account-style.css
+++ b/public/css/account-style.css
@@ -1,5 +1,5 @@
 body{
-    background: url("../background.png");
+    background: url("../background2.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
