--- a/public/css/dashboard-style.css
+++ b/public/css/dashboard-style.css
@@ -1,11 +1,31 @@
 /* GENERAL DASHBOARD   */
 body
 {
-    background: url("../background.png");
+    background: url("../background2.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.linkHistoriek
+{
+    font-size: 1.2em;
+    width: 90%;
+    margin-left:auto;
+    margin-right:auto;
+    text-align: center;
+    display: block;
+    text-decoration: none;
+    color: white;
+    padding-bottom: 8px;
+}
+
+.linkHistoriek:hover,
+.linkHistoriek:active
+{
+    text-decoration: none;
+    color: #2a88bd;
 }
 
 .contentContainer
@@ -48,7 +68,9 @@ body
     border-radius: 5px;
     border: none;
     padding: 10px;
-    margin-top: 10px;
+    margin-top: 20px;
+    max-width: 400px;
+    font-size: 1em;
 }
 
 /* STOCK */
@@ -124,16 +146,18 @@ body
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 .silo-container
 {
     padding-top: 23px;
-    width: 40%;
+    width: 50%;
     background-color: #3b6482 ;
     border-radius: 5px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 10px;
     max-width: 100px;
     display: block;
@@ -220,3 +244,12 @@ body
 {
     padding-bottom: 50px;
 }
+
+@media (min-width: 770px) {
+    .dashboardPanels
+    {
+        width: 48%;
+    }
+}
+
+
