--- a/public/css/navigation-style.css
+++ b/public/css/navigation-style.css
@@ -22,8 +22,11 @@
     display: flex/* 30px top margin to avoid conflict with the close button on smaller screens */
 }
 
+
+
 /* The navigation links inside the overlay */
 .overlay a {
+    width: 20%;
     padding: 8px;
     margin-top: 1px;
     text-decoration: none;
@@ -53,6 +56,7 @@
     top: 10px;
 }
 
+
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
     .overlay a {font-size: 20px}
@@ -80,11 +84,12 @@
 
     .navigation-bar {
         border-radius: 0;
-        background-color: black;
+        background-color: darkred;
+        opacity: 0.7;
     }
     .navigation{
-        height: 50px;
-        padding: 15px 15px;
+        height: 75px;
+        padding: 25px 15px;
         line-height: 20px;
         color: whitesmoke;
         display: flex;
@@ -158,5 +163,16 @@
     margin-left: 5px;
 }
 
+@media (min-width: 800px) {
+    .navigation-buttons a{
+        width:25%;
+        margin-bottom: 30px;
+    }
+
+    .closebtn
+    {
+        right: 0;
+    }
+}
 
 
