--- a/public/css/formAdd-style.css
+++ b/public/css/formAdd-style.css
@@ -65,6 +65,13 @@ body
     padding-bottom: 6px;
     border-radius: 3px;
 }
+#txtHardheid{
+     width: 70%;
+    text-align: center;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    border-radius: 3px;   
+}
 
 .row
 {
