--- a/public/css/navigation-style.css
+++ b/public/css/navigation-style.css
@@ -3,7 +3,7 @@
     height: 100%;
     width: 0;
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 2; /* Sit on top */
     left: 0;
     top: 0;
     background-color: rgb(0,0,0); /* Black fallback color */
@@ -84,8 +84,8 @@
 
     .navigation-bar {
         border-radius: 0;
-        background-color: darkred;
-        opacity: 0.7;
+        background-color: black;
+        opacity: 0.8;
     }
     .navigation{
         height: 75px;
