--- a/public/css/account-style.css
+++ b/public/css/account-style.css
@@ -1,8 +1,8 @@
 body{
-    background: url("../background2.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-color: #202935;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -10,6 +10,7 @@ body{
     display: flex;
     flex-direction: column;
     color: #F5F5F5;
+    background-color: #202935;
     padding: 25px;
 }
 #profile_page .profile{
@@ -18,7 +19,7 @@ body{
     padding: 25px;
     width: 100%;
     max-width: 700px;
-    background-color: #1C2F3C;
+    background-color: #2B3845;
     border-radius: 4px;
     box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.2),0px 0px 1px 0px rgba(0,0,0,0.2);
 }
