--- a/public/css/dashboard-style.css
+++ b/public/css/dashboard-style.css
@@ -1,7 +1,7 @@
 /* GENERAL DASHBOARD   */
 body
 {
-    background: url("../background2.png");
+    background-color: #202935;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -24,8 +24,8 @@ body
 .linkHistoriek:hover,
 .linkHistoriek:active
 {
-    text-decoration: none;
-    color: #2a88bd;
+    color: white;
+    cursor: pointer;
 }
 
 .contentContainer
@@ -39,22 +39,25 @@ body
 
 .contentContainerh2
 {
-    font-size: 2.3em;
-    color: whitesmoke;
+    font-size: 1.2em;
+    color: #f2f4f7;
     margin-left: auto;
     margin-right:auto;
     display: block;
     text-align: center;
-    width: 90%;
+    width: 100%;
     padding-top: 15px;
+    padding-bottom: 15px;
+    background-color: #323F52;
+
 
 }
 
 .dashboardPanels
 {
     display: block;
-    background-color: #1b2e3c;
     width: 90%;
+    background: #2B3846;
     margin: 10px auto;
     padding-bottom: 20px;
     border-radius: 2px;
@@ -111,7 +114,7 @@ body
 .stock-container > h3
 {
     font-size: 18px;
-    color: #ccc;
+    color: white;
     margin-bottom: 4px;
 }
 
@@ -154,7 +157,6 @@ body
 {
     padding-top: 23px;
     width: 50%;
-    background-color: #3b6482 ;
     border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
@@ -205,6 +207,7 @@ body
     margin-right:auto;
     text-align: center;
     position: relative;
+    border-radius: 3px;
 }
 
 .silo-graph-value
@@ -215,6 +218,8 @@ body
     text-align: center;
     position: absolute;
     bottom:0;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
 }
 
 .imgAddIcoon
