--- a/public/css/block-style.css
+++ b/public/css/block-style.css
@@ -120,6 +120,29 @@ body{
     font-weight: bold;
 }
 
+#formEdit h1{
+    font-size: 1.8em;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    padding-top: 15px;
+    text-align: center;
+    color: white;
+}
+
+#formEdit h3{
+    color: white;
+    background-color: #111c25;
+    text-align: center;
+    font-size: 1.4em;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
 /* EDIT */
 #formEdit{
     background-color: #1b2e3c;
@@ -132,17 +155,18 @@ body{
     float: left;
     color: white;
     text-align: right;
-    width: 100px;
+    width: 150px;
     font-weight: 400;
 }
 
 #textQuantity{
     display: block;
     width: 200px;
+    outline: none;
 }
 
 #total{
-    width: 400px;
+    width: 500px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -182,43 +206,51 @@ body{
     padding-bottom: 10px;
     width: 90%;
 }
+.totalAddBlock{
+    width: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.totalAddBlock label{
+    width: 400px;
+    
+} 
+
+#textQuantity
+{
+    display: block;
+    width: 200px;
+    outline: none;
+}
 
 #textHeight{
-    width: 70%;
+    display: block;
+    width: 200px;
     padding-top: 6px;
-    padding-bottom: 6px;
+    padding-bottom: 5px;
+    border-radius: 3px;
+    outline: none;
+}
+#checkboxHeight{
+    width: 30px;
+    height: 30px;
     border-radius: 3px;
 }
 
-#textHardness{
-    width: 70%;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    border-radius: 3px;   
+#textCustomHeight{
+    display: block;
+    width: 200px;
+    outline: none;
 }
 
-#formEdit h1{
-    font-size: 1.8em;
-    margin-bottom: 15px;
-    margin-top: 5px;
-    padding-top: 15px;
-    text-align: center;
-    color: white;
+.checkbox {
+    margin-top: 15px;
 }
 
-#formEdit h3{
-    color: white;
-    background-color: #111c25;
-    text-align: center;
-    font-size: 1.4em;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
-}
+
+
 
 #btnQuantity{
     width: 200px;
@@ -304,6 +336,27 @@ body{
     margin-right: auto;
 }
 
+#CreateMaterialbutton{
+    border: none;
+    display: block;
+    text-align: center;
+    color: white;
+    background-color: olivedrab;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    width: 199px;
+    margin-left: auto;
+    margin-right: auto;
+    outline: none;
+    text-transform: uppercase;
+}
+
+#CreateMaterialbutton:hover
+{
+    background-color: #458b00;
+    text-decoration: none;
+}
+
 #buttonAddCustom{
     color: red;
 }
@@ -355,6 +408,12 @@ body{
         margin-bottom: 10px;
     }
     #total{
+    width: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+    .totalAddBlock{
     width: 200px;
     display: block;
     margin-left: auto;
