--- a/public/css/block-style.css
+++ b/public/css/block-style.css
@@ -228,15 +228,14 @@ body{
 #textHeight{
     display: block;
     width: 200px;
-    padding-top: 6px;
-    padding-bottom: 5px;
-    border-radius: 3px;
+    height: 35px;
     outline: none;
-}
-#checkboxHeight{
-    width: 30px;
-    height: 30px;
     border-radius: 3px;
+}
+.checkbox{
+    display: block;
+    height: 40px;
+    width: 40px;
 }
 
 #textCustomHeight{
