layout all pages

--- a/public/css/formAdd-style.css
+++ b/public/css/formAdd-style.css
@@ -1,17 +1,12 @@
 body
 {
-    background: url("../background2.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-color: #202935;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     min-height: 100vh;
 }
 
-
-
 #formEdit{
-    background-color: #1b2e3c;
+    background-color: #2B3846;
     border: none;
     padding-bottom: 50px;
 }
