--- a/public/css/history-style.css
+++ b/public/css/history-style.css
@@ -12,7 +12,7 @@ body
     margin-left:auto;
     margin-right:auto;
     width: 90%;
-    background-color: #202935;
+    background-color: #2B3846;
     margin-top: 20px;
     padding: 20px;
     border-radius: 2px;
@@ -62,4 +62,3 @@ h5
     color: #f1f1f1;
     font-weight: 500;
 }
-
