--- a/public/css/block-style.css
+++ b/public/css/block-style.css
@@ -4,6 +4,32 @@ body{
     min-height: 100vh;
 }
 
+.qualityList
+{
+    list-style: none;
+}
+
+#qualityContainer > ul
+{
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right:auto;
+}
+
+#qualityContainer > ul > li
+{
+    width: 90%;
+    justify-content: center;
+}
+
+.qualityHeader
+{
+    text-align: center;
+    font-size: 1.3em;
+}
+
 /* index pagina */
 .silo-container
 {
@@ -42,16 +68,13 @@ body{
     background-color: #d9534f;
     padding-top: 4px;
     padding-bottom: 5px;
+    border: none;
     border-top: solid 1.5px white;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
 }
 
 .silo-container #delete:hover{
     text-decoration: none;
     background-color: #cd2626;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
 }
 
 .silo-title
@@ -415,4 +438,17 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
+}
+
+@media (min-width: 780px) {
+    #qualityContainer > ul
+    {
+        width: 90%;
+        justify-content: center;
+    }
+
+    #qualityContainer > ul > li
+    {
+        width: 40%;
+    }
 }
