--- a/public/css/materials-style.css
+++ b/public/css/materials-style.css
@@ -78,6 +78,12 @@ h1
     
 }
 
+.raw-overview > li {
+    list-style-type: none;
+}
+
+
+
 .raw-group > img{
     width:70px; 
     height:70px; 
@@ -102,12 +108,25 @@ h1
 .line{
    border-top:solid white 1px; 
 }
-.checkbox > input{
-    margin-left: 50px;
+.checkbox {
+    
+    height: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+.checkbox input{
+    margin-left: 30%;
+}
+
+
 .checkbox > p{
-    width: 50px;
+    display: block;
+    width: 35px;
+    float: left;
 }
+
 
 .raw-group #editRawmaterial
 {
@@ -129,6 +148,7 @@ h1
 
 .raw-group #deleteRawmaterial
 {
+    text-decoration: none;
     display: block;
     text-align: center;
     color: white;
@@ -151,7 +171,7 @@ h1
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    margin-top: -110px;
+    margin-top: -15px;
 }
 
 .addTotal a{
