--- a/public/css/navigation-style.css
+++ b/public/css/navigation-style.css
@@ -40,7 +40,7 @@
 
 /* When you mouse over the navigation links, change their color */
 .overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
+    color: #DDC476;
 }
 
 /* Position the close button (top right corner) */
