--- a/public/css/materials-style.css
+++ b/public/css/materials-style.css
@@ -35,7 +35,6 @@ h1
 }
 
 .raw-overview{
-    background-color: #3b6482;
     width: 90%;
     margin-left:auto;
     margin-right:auto;
@@ -54,7 +53,7 @@ h1
     margin-left:20px;
     margin-right:20px;
     border-radius: 5px;
-    background-color: #1b2e3c;
+    background-color: #364358;
     margin-top: 20px;
     margin-bottom: 20px;
     display: block;
@@ -66,10 +65,9 @@ h1
 {
     padding: 7px 0;
     padding-bottom: 10px;
-    border-bottom: 1px solid white;
     font-size: 1.4em;
     text-align: center;
-    background-color: #1b2e3c;
+    background-color: #323F51;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 
@@ -151,7 +149,6 @@ h1
     background-color: #d9534f;
     padding-top: 4px;
     padding-bottom: 5px;
-    border-top: solid 1.5px white;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
