--- a/public/css/materials-style.css
+++ b/public/css/materials-style.css
@@ -192,6 +192,17 @@ h1
     font-weight: 400;
 }
 
+#new-silo{
+    background-color: transparent;
+    padding-top: 0;
+    margin-left:auto;
+    margin-right:auto;
+    width: 60%;
+    text-align: center;
+    margin-top: -4px;
+    padding-bottom: 13px;
+}
+
 
 
 
