--- a/public/css/history-style.css
+++ b/public/css/history-style.css
@@ -50,8 +50,8 @@ h5
 .historyEven
 {
     padding: 10px;
-    background-color: #3b6482;
-    color: #1b2e3c;
+    background-color: #313945;
+    color: #f1f1f1;
     font-weight: 500;
 }
 
