--- a/public/css/formAdd-style.css
+++ b/public/css/formAdd-style.css
@@ -36,7 +36,7 @@ body
 #editInBlock{
     margin-top: -10px;
     padding-top: 20px;
-    background-color: #3b6482;
+    background-color: #313945;
     margin-right: auto;
     margin-left: auto;
     border-bottom-left-radius: 5px;
@@ -45,11 +45,12 @@ body
     width: 90%;
 }
 #editInBlock label{
+    width: 30%;
     color: white;
-    text-align: center; 
+    text-align: right;
 }
 #editInBlock input{
-    width: 70%;
+    width: 30%;
     margin-right: auto;
     margin-left: auto;
 }
