--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -18,7 +18,6 @@ h3{
 	width: 80%;
 	margin-right: auto;
 	margin-left: auto;
-
 }
 
 #myaccount{
@@ -32,10 +31,7 @@ h3{
 
 #form form{
 	width: 60%;
-	margin-right: auto;
-	margin-left: auto;
-	margin-bottom: 50px;
-	margin-top: 30px;
+	margin: 30px auto 50px auto;
 }
 
 #siloMenu{
