--- a/public/css/materials-style.css
+++ b/public/css/materials-style.css
@@ -20,6 +20,7 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin-bottom: 20px;
 }
 
 h1
@@ -40,7 +41,6 @@ h1
     margin-right:auto;
     border-radius: 5px;
     padding-bottom: 20px;
-    margin-bottom: 80px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -176,34 +176,24 @@ h1
     font-weight: 500;
 }
 
-/* EDIT */
-#formEdit{
-    background-color: #1b2e3c;
-    border: none;
-    padding-bottom: 50px;
-}
-
-#editInBlock label{
-    display: block;
-    float: left;
-    color: white;
-    text-align: right;
-    width: 150px;
-    font-weight: 400;
-}
-
 #new-silo{
-    background-color: transparent;
-    padding-top: 0;
-    margin-left:auto;
-    margin-right:auto;
-    width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
     text-align: center;
-    margin-top: -4px;
-    padding-bottom: 13px;
+    margin-top: -10px;
+    margin-bottom: 10px;
 }
 
+.glyphicon{
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 1;
 
+}
 
 
 @media (max-width: 768px) {
